--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -17,6 +17,7 @@ body
   h1
     font-size 60px
     letter-spacing 10px
+    padding-bottom 8px
     margin 0
   h1 ahover
     text-decoration none
@@ -38,13 +39,13 @@ header
     display inline-block
     border-top 2px solid black
     border-bottom 2px solid black
-    padding 10px 15px
+    padding 10px 36px 13px 36px
     margin-left -10px
     background white
     a
       float left
       display block
-      margin-right 23px
+      margin-right 40px
       color #999
       &:last-child
         margin-right 0px
@@ -58,6 +59,7 @@ header
       font-size 9px
       color #999
       text-transform uppercase
+      padding-left 5px
 
 // Portfolio page
 
