--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -7,6 +7,9 @@ global-reset()
  font-family BigNoodle
  src url("big_noodle_titling.ttf")
 
+.clearfix
+  clearfix()
+
 // Main body
 body
   font-family Lucida Grande, Lucida Sans Unicode, sans-serif
@@ -39,7 +42,7 @@ header
     display inline-block
     border-top 2px solid black
     border-bottom 2px solid black
-    padding 10px 36px 13px 36px
+    padding 10px 32px 13px 36px
     margin-left -10px
     background white
     a
@@ -64,18 +67,17 @@ header
 // Portfolio page
 
 #portfolio_nav_container
-  text-align center
-  margin 20px 0
-
-  #portfolio nav
-    display inline-block
-    .portfolio_page
-      float left
-      width 800px
-      margin-right 100px
+  nav
+    text-align center
+    padding 50px 0
     a
-      float left
+      font-family 'BigNoodle'
+      text-transform uppercase
+      font-size 24px
+      display inline
       margin-right 20px
+      &:last-child
+        margin-right 0
       &:hover
         text-decoration none
       &.unselected
@@ -87,6 +89,11 @@ header
 #portfolio_page_container
   width 1200px
   position relative
+  
+  .portfolio_page
+    float left
+    width 800px
+    margin-right 100px
 
 // Artworks
 
