--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -69,7 +69,7 @@ header
 #portfolio_nav_container
   nav
     text-align center
-    padding 50px 0
+    padding 50px 0 100px 0
     a
       font-family 'BigNoodle'
       text-transform uppercase
