updated styl and package

--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -76,6 +76,8 @@ header
       font-size 24px
       display inline
       margin-right 20px
+      position relative
+      left -5px
       &:last-child
         margin-right 0
       &:hover
