--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -205,3 +205,8 @@ ul.artworks
 
 #container.wide #portfolio .portfolio_page
   width 1200px
+  
+// Para projections video
+.para-projections
+  width 800px
+  margin auto
