refactors for heroku

--- a/assets/main_embed.styl
+++ b/assets/main_embed.styl
@@ -4,7 +4,7 @@ global-reset()
 // Typography
 @font-face
  font-family BigNoodle
- src url("big_noodle_titling.ttf")
+ src url("/big_noodle_titling.ttf")
 
 .clearfix
   clearfix()
@@ -15,7 +15,8 @@ body
   font-size 13px
   color black
   h1, h2
-    font-family 'BigNoodle'
+    font-family BigNoodle, Helvetica
+    text-transform uppercase
   h1
     font-size 60px
     letter-spacing 10px
