--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,6 @@ mixin portfolio-page(collection)
               br
               = artwork.dimensions[artwork.metric]
 
-!!! 5
 html
   head
     meta(charset='utf-8')
@@ -28,7 +27,7 @@ html
     meta(name='description', content='Julia Colavita (b. 1983) is a painter and sculptor based in Brooklyn, New York.')
     meta(name='author', content='Julia Colavita')
     meta(name='viewport', content='width=device-width,initial-scale=1')
-    != nap.css('all')
+    link(rel="stylesheet" type="text/css" href="main.css")
   body
     #container
       header
@@ -71,4 +70,4 @@ html
     #scripts
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
       script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js')
-      != nap.js('all')
+      script(src='main.js')
