--- a/assets/main.styl
+++ b/assets/main.styl
@@ -1,4 +1,4 @@
-@import nib
+@require "../node_modules/nib"
 global-reset()
 
 // Typography
@@ -164,9 +164,11 @@ ul.artworks
   right 10px
   top 8px
   color #CCC
-  font-size 20px
+  font-size 32px
+  font-weight bold
   transition color 0.5s
   cursor pointer
+  outline none
   &:hover
     color black
 
