--- a/public/main.css
+++ b/public/main.css
@@ -135,6 +135,9 @@ body a {
   color: #000;
   text-decoration: none;
 }
+body em {
+  font-style: italic;
+}
 header {
   text-align: center;
   position: relative;
@@ -325,7 +328,38 @@ ul.artworks li:hover .caption {
 #container.wide #portfolio .portfolio_page {
   width: 1200px;
 }
-.para-projections {
+.gem-drug {
   width: 800px;
-  margin: auto;
+  margin: 0 auto 50px auto;
+}
+.gem-drug * {
+  box-sizing: border-box;
+}
+.gem-drug p {
+  line-height: 22px;
+  font-size: 14px;
+  margin-bottom: 22px;
+}
+.gem-drug-body {
+  width: 61%;
+}
+.gem-drug-body, .gem-drug-details {
+  display:  inline-block;
+  vertical-align: top;
+  margin-top: 30px;
+}
+.gem-drug-details {
+  padding-left: 30px;
+  width: 39%;
+  color: #555;
+}
+.gem-drug-details p {
+  font-size: 12px;
+}
+.gem-drug-body h4 {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-bottom: 8px;
+  font-size: 13px;
+  letter-spacing: 1px;
 }
