--- a/assets/main.styl
+++ b/assets/main.styl
@@ -33,6 +33,8 @@ body
   a
     color black
     text-decoration none
+  em
+    font-style italic
 
 // Header
 header
@@ -109,9 +111,9 @@ ul.artworks
   img
     display block
     max-width 100%
-    max-height 380px
     cursor -moz-zoom-in
     cursor -webkit-zoom-in
+    max-height 500px
   .caption
     display block
     width 100%
@@ -137,6 +139,7 @@ ul.artworks
   text-align center
   padding 10px 20px 100px 20px
   box-sizing border-box
+  overflow-y scroll
   .img_container
     display inline-block
     position relative
@@ -150,11 +153,11 @@ ul.artworks
     text-align right
     line-height 18px
   img
-    max-width 100%
-    max-height 100%
     margin auto
     box-shadow 0px 3px 5px rgba(0,0,0,0.3)
     display block
+    &[data-orientation='landscape']
+      max-height 88vh
 
 #close_lightbox
   background white
@@ -204,4 +207,36 @@ ul.artworks
 // Para projections video
 .gem-drug
   width 800px
-  margin auto
+  margin 0 auto 50px auto
+
+.gem-drug *
+  box-sizing border-box;
+
+.gem-drug p
+  line-height 22px
+  font-size 14px
+  margin-bottom: 22px
+
+.gem-drug-body
+  width 61%
+
+.gem-drug-body, .gem-drug-details
+  display inline-block
+  vertical-align top
+  margin-top 30px
+
+.gem-drug-details
+  padding-left 30px
+  width 39%
+  color #555
+
+.gem-drug-details p
+  font-size 12px
+
+.gem-drug-body h4
+  text-transform uppercase
+  font-weight bold
+  margin-bottom 8px
+  font-size 13px
+  letter-spacing 1px
+
